# custom_grep

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
.github/workflows/: ci.yml
inc/: CustomGrep.h  FileCollector.h
src/: CustomGrep.cpp  FileCollector.cpp  main.cpp
tests/: TestCustomGrep.cpp  TestFileCollector.cpp
